Add H2 sample dataset and fixture test for local QA (#119)
* Add H2 sample-data fixture for tests, based on captured chat_message/documents data

Loads a real captured conversation (backend/build.gradle history lookup +
document creation via AI tools) plus hand-added rows covering functionality
it doesn't touch: file/doc links (incl. anchored) in a document body, chat
and document attachments, a standalone tool_call row, and an embedding_tasks
row. SampleDataFixtureTest is both a worked usage example and a regression
test keeping the SQL in sync with db/migration-h2. Documented in CLAUDE.md.

* Add Playwright smoke-check script, make CLAUDE.md more concise

Move the Playwright example from an inline snippet in CLAUDE.md into a real,
runnable scripts/playwright-smoke.js (boots the backend jar, polls health,
logs in, screenshots the mounted SPA) — verified working end-to-end. Also
move the H2 sample-data fixture's contents/rationale into the SQL file's own
header comment, so CLAUDE.md just points at the file instead of duplicating it.

* Wire playwright-smoke.js to seed db/sample-data.sql by default

Loads the fixture into a disposable local-db/h2-smoke file (AUTO_SERVER=TRUE
lets a short-lived RunScript JVM write into it while the app is running) so
the smoke screenshot shows real chat/document content instead of an empty
app. --no-seed skips it. Verified end-to-end: seeded doc content round-trips
through the running app's API. Documented in CLAUDE.md.

* Fix playwright-smoke.js screenshotting before seeded data rendered

#root having children only proves the React shell mounted — the sidebar's
chat list and the active chat's messages are both fetched asynchronously
after that, so the earlier screenshot showed an empty app despite the
backend already having the seeded data (confirmed via a direct /api/chats
check). Wait for .chat-list-item and .message before screenshotting when
seeding is on. Verified: the screenshot now shows the seeded conversation
in full (messag